--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,16 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
+    "nth-check": "^2.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4",
-    "nth-check": "^2.1.1"
+    "recharts": "^2.15.3",
+    "web-vitals": "^2.1.4"
   },
   "overrides": {
     "nth-check": "^2.1.1",
-    "postcss":"^8.4.38"
+    "postcss": "^8.4.38"
   },
   "scripts": {
     "start": "react-scripts start",
