--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,7 @@
     "web-vitals": "^2.1.4"
   },
   "overrides": {
-    "nth-check": "^2.1.1",
-    "postcss": "^8.4.38"
+    "nth-check": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1"
   }
 }
