--- a/next-frontend/package.json
+++ b/next-frontend/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "next": "15.3.2",
     "ngrok": "^5.0.0-beta.2",
+    "package.json": "^2.0.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
